--- a/CONTACTinsaid.html
+++ b/CONTACTinsaid.html
@@ -14,7 +14,7 @@
 		<h1>contact us</h1>
 		<nav>
 			<ul>
-				<li><a href="HOMEinsaid.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="services.html">Services</a></li>
 				
