--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<h1>Lee Advertising Agency</h1>
 		<nav>
 			<ul>
-				<li><a href="About.html">About</a></li>
-				<li><a href="Services.html">Services</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="services.html">Services</a></li>
 				
 				<li><a href="CONTACTinsaid.html">Contact</a></li>
 			</ul>
