--- a/about.html
+++ b/about.html
@@ -25,13 +25,13 @@
 	</header>
 
     
-    &nbsp &nbsp &nbsp Vision Advertising is a full-service marketing agency that offers a suite of marketing services to our clients. As we like to say, “if it smells like marketing, we &nbsp&nbsp &nbsp &nbspcan do it." We cater to both business-to-business and business-to-consumer brands.<br><br>
+    Vision Advertising is a full-service marketing agency that offers a suite of marketing services to our clients. As we like to say, “if it smells like marketing, we can do it." We cater to both business-to-business and business-to-consumer brands.<br><br>
 
-    &nbsp &nbsp &nbspRather than having marketing generalists, each member of our team of specialists focuses on their individual areas of expertise.<br><br>
+    Rather than having marketing generalists, each member of our team of specialists focuses on their individual areas of expertise.<br><br>
 
-    &nbsp &nbsp &nbspOur coverage area is predominantly focused on New England, but we will happily serve businesses nationally. Some of the businesses we help include:&nbsp &nbsp &nbsp &nbsp &nbsprestaurants, retail shops, business brokerages, insurance agencies, manufacturers, law firms, and accounting firms.<br><br>
+    Our coverage area is predominantly focused on New England, but we will happily serve businesses nationally. Some of the businesses we help include:restaurants, retail shops, business brokerages, insurance agencies, manufacturers, law firms, and accounting firms.<br><br>
 
-    &nbsp &nbsp &nbspWe encourage you to explore the possibilities with us and see how we can craft marketing designed to meet your individual goals.
+    We encourage you to explore the possibilities with us and see how we can craft marketing designed to meet your individual goals.
 
 
 
