--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<section id="hero">
 			<h2>Welcome to Lee Advertising Agency</h2>
 			<p>We provide high-quality services that meet all your needs</p>
-			<a href="about.html" class="btn">Learn more</a>
+			<a href="Aabout.html" class="btn">Learn more</a>
 		</section>
 
 		<section id="services">
@@ -43,7 +43,7 @@
 
 
 			</ul>
-			<a href="services.html" class="btn">View all services</a>
+			<a href="Sservices.html" class="btn">View all services</a>
 		</section>
 	</main>
 
